fix: vertical writing & pagination mode layout but on iOS Safari 16.4
fix: double tap to zoom problem on iOS Safari

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -181,6 +181,10 @@ body.dark {
     font-size: var(--ui-font-size) !important;
 }
 
+ion-fab-button::part(native) {
+    touch-action: none;
+}
+
 ion-toast::part(button) {
     font-size: var(--ui-font-size) !important;
 }
